[gd_scene load_steps=4 format=3 uid="uid://bin20i18rqr3v"]

[ext_resource type="Script" path="res://WindowContent/window_lipsync.gd" id="1_w1aem"]
[ext_resource type="Script" path="res://PackedScenes/interactive_time_cursor.gd" id="2_45ia4"]
[ext_resource type="Script" path="res://WindowContent/gd_phonemes_timeline.gd" id="2_e22uh"]

[node name="window_lipsync" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w1aem")

[node name="file_dialog_wav" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(30, 100)
size = Vector2i(452, 350)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.wav")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="no_event_label" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="no_event_label"]
offset_left = 405.0
offset_top = 311.0
offset_right = 747.0
offset_bottom = 337.0
text = "There is currently no lip sync event selected."

[node name="container_content" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="import_button" type="Button" parent="container_content"]
visible = false
custom_minimum_size = Vector2(150, 0)
offset_right = 135.0
offset_bottom = 31.0
size_flags_horizontal = 0
text = "Mime to Audio..."

[node name="MarginContainer" type="MarginContainer" parent="container_content"]
offset_right = 1152.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="phonemes_timeline" type="MK_PhonemeTimeline" parent="container_content/MarginContainer"]
visible = false
clip_contents = true
custom_minimum_size = Vector2(0, 60)
offset_left = 15.0
offset_right = 1137.0
offset_bottom = 60.0
size_flags_vertical = 2
script = ExtResource("2_e22uh")

[node name="InteractiveTimeCursor" type="Control" parent="container_content/MarginContainer/phonemes_timeline"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_45ia4")

[node name="play_button" type="Button" parent="container_content"]
visible = false
custom_minimum_size = Vector2(150, 0)
offset_top = 617.0
offset_right = 150.0
offset_bottom = 648.0
size_flags_horizontal = 0
text = "Play Audio
"

[connection signal="file_selected" from="file_dialog_wav" to="." method="_on_file_dialog_wav_file_selected"]
[connection signal="pressed" from="container_content/import_button" to="." method="_on_import_wav_pressed"]
[connection signal="pressed" from="container_content/play_button" to="." method="_on_play_audio_pressed"]
